test_case/rust-lang_rust/46108_351051670.rs
rust
extern { type C; }
impl DynSized for C {} //~ ERROR E0322
